se corrigio el nombre del proyecto y modificaron los modelos

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                co.edu.uniquindio.proyectofinal3/co.edu.uniquindio.proyectofinal3.HelloApplication
+                                co.edu.uniquindio.proyectofinal3/co.edu.uniquindio.icaja.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
