--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
             <version>4.7.0-9.1.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
